# swemo-mcp

./: Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini  riksbanken_notebook.ipynb
.github/workflows/: release.yml
riksbanken_mcp/: models.py  server.py
riksbanken_mcp/services/: monetary_policy_api.py  swea_api.py  swestr_api.py
riksbanken_mcp/tools/: monetary_policy_tools.py  swea_tools.py  swestr_tools.py
src/riksbank_mcp/: models.py  openapi.py  query.py  server.py
src/riksbank_mcp/openapi/: __init__.py  monetary_policy_data.json
src/riksbank_mcp/services/: monetary_policy_api.py  swea_api.py  swestr_api.py
src/riksbank_mcp/tools/: monetary_policy_tools.py  swea_tools.py  swestr_tools.py
src/riksbank_mcp/utils/: realized_merge.py
src/riksbanken_mcp/: models.py
src/riksbanken_mcp/services/: monetary_policy_api.py  swea_api.py
src/riksbanken_mcp/tools/: swestr_tools.py
src/swemo_mcp/: query.py  server.py
src/swemo_mcp/tools/: monetary_policy_tools.py
src/swemo_mcp/utils/: realized_merge.py
tests/integration/: test_monetary_policy_tools_integration.py  test_swea_tools_integration.py  test_swestr_tools_integration.py
tests/unit/: test_openapi_spec.py
