[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riksbanken-mcp"
version = "0.1.0"
description = "An MCP Server for Riksbank data (monetary policy, SWEA, SWESTR)."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.7.0",
    "mypy>=1.5.1"
]

[tool.hatch.build.targets.wheel]
packages = ["riksbanken_mcp"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
