[project]
name = "riksbank-mcp"
version = "0.1.0"
description = "An MCP Server for Riksbank data (monetary policy, SWEA, SWESTR)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "jsonschema>=4.0.0"
]
authors = [
    { name = "Hugi Aegisberg", email = "hugi.aegisberg@pm.me" }
]
license = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "mypy>=1.5.1"
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
"Homepage" = "https://github.com/aerugo/riksbank-mcp"
"Bug Tracker" = "https://github.com/aerugo/riksbank-mcp/issues"

[project.scripts]
riksbank-mcp = "riksbank_mcp:main"


